began styling the home page

--- a/html/index.html
+++ b/html/index.html
@@ -1,3 +1,28 @@
 <!DOCTYPE html>
+<!-- <link rel="stylesheet" type="text/css" href="../www/styler.css"> -->
 
-<h3><center> HTML HOMEPAGE :D</h3></center>
+<html>
+  <body>
+    <div id = "homeBGImage">
+
+      <div id = "homePageTitle">
+        Quality of Life Analysis Report
+      </div>
+
+      <div id = "contributorReportBox">
+          <div id = "contributorReportHeader">
+            Project Contributors
+          </div>
+        <div id = "contributorReportContent">
+          <ul>
+            <li>Keagan Moo</li>
+            <li>Rosemary Adams</li>
+            <li>Brendan Kellogg</li>
+            <li>Sean Martin</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+  </body>
+</html>
