--- a/html/index.html
+++ b/html/index.html
@@ -6,14 +6,23 @@
     <div id = "homeBGImage">
 
       <div id = "homePageTitle">
-        Quality of Life Analysis Report
+        PROJECT LIFE QUALITY REPORT
       </div>
 
-      <div id = "contributorReportBox">
-          <div id = "contributorReportHeader">
-            Project Contributors
+      <div id = "HomeContentBox">
+
+          <div id = "HomeContentHeader">
+            What is it?
           </div>
-        <div id = "contributorReportContent">
+
+          <div id = "HomeContentText">
+            <p>CONTENT PLACEHOLDER</p>
+          </div>
+
+          <div id = "HomeContentHeader">
+            <p>Who did it?</p>
+          </div>
+        <div id = "HomeContentText">
           <ul>
             <li>Keagan Moo</li>
             <li>Rosemary Adams</li>
