--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
     <div id = "homeBGImage">
 
       <div id = "homePageTitle">
-        PROJECT LIFE QUALITY REPORT
+        Crime, Education, and Income: a Statistical Summary
       </div>
 
       <div id = "HomeContentBox">
@@ -16,11 +16,45 @@
           </div>
 
           <div id = "HomeContentText">
-            <p>CONTENT PLACEHOLDER</p>
+            <p>
+
+              <b>The Report</b><br>
+
+              The intent of this page is to inform legislators and voters about the relationship between income, education, and crime rates. We believe that anyone creating legislation to fix
+               would benefit from understanding the relationship between these three basic aspects that influence the quality of life in each state. Voters would also benefit from being informed
+               about the relationship between the three when deciding what legislation to vote for. Due to the nature of the presentation of our page, our primary audience will be college aged
+               students at the University of Washington, and so the styling of this page reflects that.<br><br>
+
+              <b>Structure</b><br>
+
+              Each data set can be explored individually on the three map tabs. There you can use interactive tools to look at state data by year. The report tab contains a comparison between the
+              three sets, along with an interactive histogram that can compare state by state data.  The prediction tab has our predicitons for education in 2012 based on statistical analysis and
+              machine learning.<br><br>
+
+              <b>Data</b><br>
+
+              Each data set had values for at least every other year between 1992 and 2010. Education data was the most limiting, and that is why we chose that data set to predict, based on the
+              2012 values of the other data sets. There is a small blurb on each page about the source of each data set, but you can visit the pages for each data set here: <br><br>
+
+              <b>Education:</b>  </br>
+
+              <b>Crime:</b>  </br>
+
+              <b>Income:</b>  </br><br>
+
+              <b>Limitations</b><br>
+
+              The data we explore here is only at the state level, and is not completely current. In this way the data is more pertinent to evaluating our nation as a whole, rather than at a
+              county or city level. It also doesn't reveal current issues, rather is better shows general trends across time. We can take these trends and apply them to our current situations,
+              as we have done with our predictions, to understand the general relationship between the three factors examined. However, to apply the trends from a decade ago to current or future
+              situations are dangerous, and should not be taken as perfect for every situation. We have done our best to highlight outliers and trends in the report, but encourage you to explore
+              the data on your own to draw your own conclusions.
+
+            </p>
           </div>
 
           <div id = "HomeContentHeader">
-            <p>Who did it?</p>
+            <p>Project Creators</p>
           </div>
         <div id = "HomeContentText">
           <ul>
