--- a/html/index.html
+++ b/html/index.html
@@ -36,18 +36,18 @@
               Each data set had values for at least every other year between 1992 and 2010. Education data was the most limiting, and that is why we chose that data set to predict, based on the
               2012 values of the other data sets. There is a small blurb on each page about the source of each data set, but you can visit the pages for each data set here: <br><br>
 
-              <b>Education:</b>  </br>
+              <b>Education: <a href="http://www.higheredinfo.org/dbrowser/index.php?measure=32">The National Center for Higher Education Management Systems</a></b>   </br>
 
-              <b>Crime:</b>  </br>
+              <b>Crime: <a href="http://www.ucrdatatool.gov/Search/Crime/State/StatebyState.cfm">Uniform Crime Reporting</a> </b> </br>
 
-              <b>Income:</b>  </br><br>
+              <b>Income: <a href="https://www.census.gov/hhes/www/income/data/statemedian/">United States Census</a> </b>  </br><br>
 
               <b>Limitations</b><br>
 
               The data we explore here is only at the state level, and is not completely current. In this way the data is more pertinent to evaluating our nation as a whole, rather than at a
               county or city level. It also doesn't reveal current issues, rather is better shows general trends across time. We can take these trends and apply them to our current situations,
               as we have done with our predictions, to understand the general relationship between the three factors examined. However, to apply the trends from a decade ago to current or future
-              situations are dangerous, and should not be taken as perfect for every situation. We have done our best to highlight outliers and trends in the report, but encourage you to explore
+              situations are dangerous, and should not be taken as perfect for every situation. Washington DC is not represented in all the datasets, and so it has been ommitted. Additionally, each data set is only so revealing. Crime evalutations are only violent crimes, and income doesn't show a regional flux. Education shows the percent of high school graduates who go to college, which does not include those who don't graduate high school. This skews the data, because if you make it through high school in an area where dropping out is frequent, you are likely to go to college. We have done our best to highlight outliers and trends in the report, but encourage you to explore
               the data on your own to draw your own conclusions.
 
             </p>
