--- a/html/intros/sumHistText.html
+++ b/html/intros/sumHistText.html
@@ -5,6 +5,6 @@
 
     This bar chart allows you to select three states that you would like to compare, the year, and one dataset. It allows you
     to take a more in depth look at what might have influenced a state during a specific point in time, rather than a trend over
-    time. For example, [HERE I WILL PUT AN EXAMPLE WHEN I CAN SEE THE GRAPH]
+    time. For example, you can use the graph to see New Mexico and Nevada, the two extremes of 2000, compared against the state of Washington.
   </body>
 </html>
