--- a/html/intros/crossAnalysisText.html
+++ b/html/intros/crossAnalysisText.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <body>
-    PLACEHOLDER
+    This plot runs linear analysis on two data sets. You can choose either a specific state or the nation as a whole, and what data set combination you would like. The trend line shows one data set as a function of the other. For example, if the trend line for education and crime has a downward slope, it indicates that the more that education goes up, the less crime there is. A positive slope between income and education indicates that the more income increases, the more education there is. It is important to note that this graph only implies correlation, not causation.
   </body>
 </html>
