changes for application deployment

--- a/html/intros/PredictEducationWriteup.html
+++ b/html/intros/PredictEducationWriteup.html
@@ -2,6 +2,8 @@
 <html>
   <body>
 
+    <img src = "imgs/eduPredict.jpg">
+
     On this page we use a machine learning model package called rpart to predict the future education scores in states around the US.
     We used a training data set including state data up to six years in the past regarding crime, income, and education.
     Using this information and a machine learning algorthm we can make a very rough prediction of the education level across the US.<br><br>
